[package]
name = "lvx"
version = "0.1.0"
authors = ["Anang Fauzi <anang312@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.72"
publish = false


[dependencies]
chrono = "0.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
rfd = "0.13"

eframe = "0.26.2"
egui_extras = "0.26.2"
epi = "0.17"

env_logger = "0.11"
