[package]
name = "lvx"
version = "0.1.0"
authors = ["Anang Fauzi <afauzx@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.72"
publish = false


[dependencies]
chrono = "0.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
rfd = "0.14.1"

eframe = { version = "0.27.2", features = ["wgpu"] }
egui_extras = "0.27.2"
epi = "0.17"
wgpu = { version = "*", features = ["webgpu", "webgl"] }

env_logger = "0.11"
