[package]
name = "lvx"
version = "0.2.0"
authors = ["Anang Fauzi <afauzx@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.72"
publish = false


[dependencies]
chrono = "0.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
rfd = "0.14.1"

eframe = { version = "0.30", features = ["wgpu"] }
egui_extras = "0.30"
catppuccin-egui = { version = "5.4.0", default-features = false, features = ["egui30"] }

env_logger = "0.11"
